mywork/force-app/main/default/objects/Jenkins_Job__c/Jenkins_Job__c.object-meta.xml
<CustomObject>
    <description>Represents a job on a Jenkins CI build server.</description>
    <label>Jenkins Job</label>
    <nameField>
        <label>Jenkins Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jenkins Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>