mywork/force-app/main/default/objects/Jenkins_Job__c/fields/Build_Rule__c.field-meta.xml
<CustomField>
    <fullName>Build_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Build Rule</label>
    <referenceTo>Build_Rule__c</referenceTo>
    <relationshipLabel>Jenkins Jobs</relationshipLabel>
    <relationshipName>Jenkins_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>