mywork/force-app/main/default/objects/Jenkins_Job__c/fields/CI_Instance__c.field-meta.xml
<CustomField>
    <fullName>CI_Instance__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The target instance for this Job</inlineHelpText>
    <label>CI Instance</label>
    <referenceTo>CI_Instance__c</referenceTo>
    <relationshipLabel>Jenkins Jobs</relationshipLabel>
    <relationshipName>Jenkins_Jobs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>