mywork/force-app/main/default/objects/Jenkins_Job__c/fields/Dependent_Jenkins_Job__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Jenkins_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A job dependent on this job.</description>
    <label>Dependent Jenkins Job</label>
    <referenceTo>Jenkins_Job__c</referenceTo>
    <relationshipLabel>Dependent Jenkins Jobs</relationshipLabel>
    <relationshipName>Dependent_Jenkins_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>