mywork/force-app/main/default/objects/Jenkins_Job__c/fields/Ignore_Build_Errors__c.field-meta.xml
<CustomField>
    <fullName>Ignore_Build_Errors__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ignore Build Errors</label>
    <type>Checkbox</type>
</CustomField>