mywork/force-app/main/default/objects/Jenkins_Job__c/fields/Is_Validation__c.field-meta.xml
<CustomField>
    <fullName>Is_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if this job is performing a validation. When unchecked it indicates this is for a deployment</inlineHelpText>
    <label>Is Validation?</label>
    <type>Checkbox</type>
</CustomField>