mywork/force-app/main/default/objects/Jenkins_Job__c/fields/Last_Build_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Build_Status__c</fullName>
    <label>Last Build Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>