mywork/force-app/main/default/objects/Jenkins_Job__c/fields/Path__c.field-meta.xml
<CustomField>
    <fullName>Path__c</fullName>
    <description>Represents a relative URL path to a job on a Jenkins CI build server.</description>
    <label>Path</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>