mywork/force-app/main/default/objects/Jenkins_Job__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Represents a Sightline release.</description>
    <label>Release</label>
    <referenceTo>Release__c</referenceTo>
    <relationshipLabel>Jenkins Jobs</relationshipLabel>
    <relationshipName>Jenkins_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>