mywork/force-app/main/default/objects/Jenkins_Job__c/fields/Source_Repository_Location__c.field-meta.xml
<CustomField>
    <fullName>Source_Repository_Location__c</fullName>
    <label>Source Repository Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>