mywork/force-app/main/default/objects/Jenkins_Job__c/fields/Token__c.field-meta.xml
<CustomField>
    <fullName>Token__c</fullName>
    <description>Represents an authentication token for a job on a Jenkins CI build server.</description>
    <label>Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>