mywork/force-app/main/default/objects/Jenkins_Job__c/fields/Trigger_Job_Automatically__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Job_Automatically__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Trigger_Job_Automatically__c checkbox to be checked if the jenkins jobs should start automatically start the jenkins job.</description>
    <label>Trigger Job Automatically</label>
    <type>Checkbox</type>
</CustomField>